# mdo

./: .gitattributes  .gitignore  6q29tstbqskajsplvebluveovohlce3s  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOLT_REMOTE.md  LICENSE-APACHE  LICENSE-MIT  README.html  README.md  SECURITY.md  build.rs  hoptetnp7jdtrnno55nsh0cfkpirumig  manifest  plan-dot-6.md  sm7apdpbtdq6uapkfjmvbvvv2rdjr3dm  voimacecm75qokace3hhtrdejkqbhuhg
.agents/: setup
.agents/skills/analyzing-orb-sizing/: SKILL.md
.agents/skills/analyzing-orb-sizing/scripts/: analyze.py
.agents/skills/analyzing-orb-sizing/tests/: test_analyze.py
.beads/: config.yaml  interactions.jsonl  issues.jsonl
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experience_report.yml
.github/workflows/: ci.yml  metrics.yml  pages.yml  release.yml
android/: README.md  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/maphew/mdo/: MainActivity.java  NativeRenderer.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/values-v27/: themes.xml
android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
android/fastlane/metadata/android/en-US/changelogs/: 600.txt  601.txt
assets/: mdo-default-typography.css  restore-simple-css.css
docs/: android-privacy.html  android-privacy.md  custom-css.md  faux-browser-window.md  file-manager-integration.md  index.html  index.md  index.source.html  install.ps1  install.sh  maintaining.md  usage.md
docs/adr/: 0001-rename-to-mdo.html  0001-rename-to-mdo.md  0002-distribution-strategy.html  0002-distribution-strategy.md  0003-keep-python-metrics-tooling.html  0003-keep-python-metrics-tooling.md  0004-state-aware-setup-launcher.md
docs/assets/: sample.css  sample.html  sample.md  site.css  site.js
docs/metrics/: index.html  latest.json  privacy.html
docs/metrics/history/: 2026-05-30.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-06.json  2026-06-07.json  2026-06-08.json  2026-06-09.json  2026-06-10.json  2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  (+15 more)
docs/release-notes/: v0.6.0.md
docs/things-tried/: interactive-preview-window.css  interactive-preview-window.md  native-gui-first-run-onboarding.md
packaging/: README.md
packaging/fdroid/: README.md  io.github.maphew.mdo.yml
packaging/google-play/: README.md  data-safety.md
packaging/homebrew/: mdo.rb
packaging/scoop/: mdo.json
packaging/winget/Maphew.Mdo/0.3.0/: Maphew.Mdo.installer.yaml  Maphew.Mdo.locale.en-US.yaml  Maphew.Mdo.yaml
packaging/winget/Maphew.Mdo/0.4.0/: Maphew.Mdo.installer.yaml  Maphew.Mdo.locale.en-US.yaml  Maphew.Mdo.yaml
packaging/winget/Maphew.Mdo/0.5.0/: Maphew.Mdo.installer.yaml  Maphew.Mdo.locale.en-US.yaml  Maphew.Mdo.yaml
packaging/winget/Maphew.Mdo/0.6.0/: Maphew.Mdo.installer.yaml  Maphew.Mdo.locale.en-US.yaml  Maphew.Mdo.yaml
packaging/winget/Maphew.Mdo/0.6.1/: Maphew.Mdo.installer.yaml  Maphew.Mdo.locale.en-US.yaml  Maphew.Mdo.yaml
scripts/: build-docs.py  collect-metrics.py  install-explorer.ps1  install-linux-file-manager.sh  uninstall-explorer.ps1  uninstall-linux-file-manager.sh
src/: android.rs  file_manager.rs  highlight.rs  lib.rs  main.rs  windows_setup.rs  windows_tour.rs
tests/: cli.rs  security.rs  test_collect_metrics.py  wrapper.rs
