[package]
name = "mdo-cli"
version = "0.2.0"
edition = "2021"
authors = [
    "Matt Wilkie <matt.wilkie@yukon.ca>",
    "Hafiz Ali Raza <haffizaliraza@gmail.com>",  # original upstream author
]
description = "A simple Rust CLI to convert Markdown to HTML5 (styled with simple.css), with optional file watching"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maphew/mdo"
homepage = "https://github.com/maphew/mdo"
documentation = "https://docs.rs/mdo-cli"
readme = "README.md"
keywords = ["markdown", "html", "cli", "rust"]
categories = ["command-line-utilities", "text-processing"]

# Files shipped to crates.io. We must include `assets/` because the binary
# embeds simple.min.css at build time via `include_str!`.
include = [
    "src/**/*.rs",
    "assets/simple.min.css",
    "assets/simple.css.LICENSE",
    "scripts/*.ps1",
    "scripts/*.sh",
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "example.md",
]

# Forked with gratitude from Hafiz Ali Raza's original Markdown-to-HTML CLI
# (© 2025 Hafiz Ali Raza, MIT/Apache-2.0).
#
# This crate also bundles simple.css (https://simplecss.org/, MIT-licensed,
# © 2020 Kev Quirk). See assets/simple.css.LICENSE.

[dependencies]
pulldown-cmark = "0.10"
clap = { version = "4", features = ["derive"] }
notify = "6"

[[bin]]
name = "mdo"
path = "src/main.rs"

[[bin]]
name = "mdo-open"
path = "src/bin/mdo-open.rs"
