[package]
name = "mdo-cli"
version = "0.3.0"
edition = "2021"
default-run = "mdo"
build = "build.rs"
authors = [
    "Matt Wilkie <maphew@gmail.com>",
    "Hafiz Ali Raza <haffizaliraza@gmail.com>",  # original upstream author
]
description = "A simple Rust CLI to convert Markdown to HTML5 (styled with simple.css), with optional file watching"
license = "MIT OR Apache-2.0"
repository = "https://github.com/maphew/mdo"
homepage = "https://maphew.github.io/mdo/"
documentation = "https://docs.rs/mdo-cli"
readme = "README.md"
keywords = ["markdown", "html", "cli", "rust"]
categories = ["command-line-utilities", "text-processing"]

# Files shipped to crates.io. We must include `assets/` because the binary
# embeds simple.min.css at build time via `include_str!`.
include = [
    "/src/**/*.rs",
    "/tests/**/*.rs",
    "/assets/simple.min.css",
    "/assets/simple.css.LICENSE",
    "/assets/restore-simple-css.css",
    "/assets/mdo.ico",
    "/scripts/*.ps1",
    "/scripts/*.sh",
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/example.md",
]

# Forked with gratitude from Hafiz Ali Raza's original Markdown-to-HTML CLI
# (© 2025 Hafiz Ali Raza, MIT/Apache-2.0).
#
# This crate also bundles simple.css (https://simplecss.org/, MIT-licensed,
# © 2020 Kev Quirk). See assets/simple.css.LICENSE.

[dependencies]
ammonia = "4.1.2"
libc = "0.2"
pulldown-cmark = "0.10"
clap = { version = "4", features = ["derive"] }
notify = "6"

[build-dependencies]
winresource = "0.1.31"

# Windows-only. Opens the rendered file via the Win32 ShellExecuteW API
# instead of `cmd /C start`, so cmd metacharacters in the path can never be
# interpreted as commands. See the SECURITY note in launch_browser
# (src/main.rs). opener calls ShellExecuteW directly — no cmd.exe.
[target.'cfg(windows)'.dependencies]
opener = "0.8"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[[bin]]
name = "mdo"
path = "src/main.rs"

[[bin]]
name = "mdo-open"
path = "src/bin/mdo-open.rs"

[[bin]]
name = "mdo-setup"
path = "src/bin/mdo-setup.rs"
